# opengl-python

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/demos/: framework1.md  triangle.md  window.md
src/demos/: 00_window.py  01_triangle.py
src/framework/: buffers.py  debug.py  sugar.py  windows.py
src/framework/shaders/: __init__.py  helpers.py  objects.py
