[project]
name = "gl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "pyopengl>=3.1.9",
    "numpy",
    "pillow",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",

]
